[metadata]
name = awfel
version = attr: awfel.__version__
description = Another workflow engine.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bebleo/smtpdfix
author = James Warne
author_email = bebleo@yahoo.com
license = GPLv3
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Source = https://github.com/awfel/pyawfel
    Documentation = https://github.com/awfel/pyawfel#readme
    Issues = https://github.com/awfel/pyawfel/issues

[options]
packages = find:
include_package_data = True
install_requires =
    semver
    jinja2
python_requires = >=3.7, <4

[options.extras_require]
dev =
    pre-commit
    pytest
    pytest-cov
    pytest-mock
    smtpdfix >= 0.2.7
    tox
    flake8
    isort
    sphinx
    sphinx_rtd_theme

[build_sphinx]
project='Awfel'
version="0.0"
release="0.0.1.pre"
source-dir=docs

[flake8]
exclude =
    .*/,
    dist/,
    doc/,
    *lib/python*,
    *egg,
    build/,
    venv/,
    utils/,
    .mypy-cache,
    __pycache__,
    *egg-info,

[isort]
profile=hug
src_paths=awfel,test
